--- a/delalive/src/app/Header/Header.css
+++ b/delalive/src/app/Header/Header.css
@@ -8,3 +8,15 @@
     font-size: 2em;
     margin-top: 10px;
 }
+
+.header-ul{
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    padding: 0;
+}
+
+.header-li{
+    margin-left: 20px;
+    font-size: 1.7em;
+}
